[package]
name = "signature"
description = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"
version = "2.3.0-pre.6"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/signature"
homepage = "https://github.com/RustCrypto/traits/tree/master/signature"
repository = "https://github.com/RustCrypto/traits"
readme = "README.md"
keywords = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories = ["cryptography", "no-std"]
edition = "2024"
rust-version = "1.85"

[dependencies]
derive = { package = "signature_derive", version = "2", optional = true }
digest = { version = "=0.11.0-pre.10", optional = true, default-features = false }
rand_core = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
sha2 = { version = "=0.11.0-pre.4", default-features = false }

[features]
alloc = []
# TODO: remove this feature in the next breaking release
std = ["alloc", "rand_core?/std"]
rand_core = ["dep:rand_core"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
