[package]
name = "signature"
version = "2.3.0-pre.7"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/signature"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "Apache-2.0 OR MIT"
keywords = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories = ["cryptography", "no-std"]
description = "Traits for cryptographic signature algorithms (e.g. ECDSA, Ed25519)"

[dependencies]
derive = { package = "signature_derive", version = "2", optional = true, path = "../signature_derive" }
digest = { version = "=0.11.0-pre.10", optional = true, default-features = false }
rand_core = { version = "0.9", optional = true, default-features = false }

[dev-dependencies]
hex-literal = "1"
sha2 = { version = "=0.11.0-pre.5", default-features = false }

[features]
alloc = []
rand_core = ["dep:rand_core"]

[package.metadata.docs.rs]
all-features = true
