[package]
name          = "signature_derive"
version       = "2.1.0"
authors       = ["RustCrypto Developers"]
license       = "Apache-2.0 OR MIT"
description   = "Custom derive support for the 'signature' crate"
documentation = "https://docs.rs/signature"
homepage      = "https://github.com/RustCrypto/traits/tree/master/signature_derive"
repository    = "https://github.com/RustCrypto/traits"
readme        = "README.md"
edition       = "2021"
rust-version  = "1.60"
keywords      = ["crypto", "ecdsa", "ed25519", "signature", "signing"]
categories    = ["cryptography", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
