[package]
name = "stream-cipher"
version = "0.3.2"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
description = "Stream cipher traits"
documentation = "https://docs.rs/stream-cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.13"
blobby = { version = "0.1", optional = true }

[features]
std = []
dev = ["blobby"]

[badges]
travis-ci = { repository = "RustCrypto/traits" }

[package.metadata.docs.rs]
features = [ "std" ]
