[package]
name = "stream-cipher"
description = "Stream cipher traits"
version = "0.4.0-pre"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/stream-cipher"
repository = "https://github.com/RustCrypto/traits"
keywords = ["crypto", "stream-cipher", "trait"]
categories = ["cryptography", "no-std"]

[dependencies]
generic-array = "0.14"
blobby = { version = "0.1", optional = true }

[features]
std = []
dev = ["blobby"]

[package.metadata.docs.rs]
features = [ "std" ]
