[package]
name = "universal-hash"
version = "0.6.1"
authors = ["RustCrypto Developers"]
edition = "2024"
rust-version = "1.85"
documentation = "https://docs.rs/universal-hash"
readme = "README.md"
repository = "https://github.com/RustCrypto/traits"
license = "MIT OR Apache-2.0"
keywords = ["crypto", "mac"]
categories = ["cryptography", "no-std"]
description = "Traits which describe the functionality of universal hash functions (UHFs)"

[dependencies]
ctutils = "0.4"
common = { version = "0.2", package = "crypto-common" }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
