[package]
name = "vrf"
description = "Traits for verifiable random functions (VRFs)"
version = "0.1.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
edition = "2024"
keywords = ["crypto", "ecvrf", "vrf"]

[dependencies]
digest = { version = "=0.11.0-pre.10", default-features = false }
